[tool.poetry]
name = "poetry shell"
version = "0.1.0"
description = ""
authors = ["Katya Vinogradov <katyavinogradova2505@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
yfinance = "^0.2.40"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
